[package]
name = "vcnl4040_ex"
version = "0.1.0"
edition = "2021"

[dependencies]
vcnl4040 = { path = ".." }
i2cdev = "0.6.1"
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
embedded-hal = "1.0.0-alpha.10"
embedded-hal-async = "1.0.0"
futures = "0.3.28"
nix = { version = "0.29.0", features = ["time"] }
tokio = { version = "1.12.0", features = ["io-util", "time"] }
tokio-serial = "5.4.4"
simple_logger = "1.13.0"
log = "0.4.14"
